--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@
     margin: 0 1em .5em;
     background-image: linear-gradient(135deg, white 0%, white 20%, #198c8c 50%, #590098 100%);
     border-bottom: 3px solid black;
+    font-variant: small-caps;
   }
   header img {
       height: 80px;
@@ -40,6 +41,49 @@
   }
   main {
     margin: 0 1em .5em;
+  }
+  main h1 {
+    padding: 0 0 0 2em;
+    font-variant: small-caps;
+    font-style: italic;
+    color: #198c8c;
+    text-shadow: 2px 2px 0 black;
+  }
+  /*
+  main section {
+    column-count: 2;
+    column-rule: 2px solid black;
+  }
+  */
+  main section h2 {
+    padding: 0 0 .5em 2em;
+    font-variant: small-caps;
+    font-style: italic;
+    color: #198c8c;
+    text-shadow: 2px 2px 0 black;
+  }
+  main section dl {
+    padding: 0 0 .5em 2em;
+  }
+  main section dl h3 {
+    font-variant: small-caps;
+    font-style: italic;
+    font-weight: bolder;
+    text-decoration: underline;
+    padding-bottom: .5em;
+  }
+  main section dl dt {
+    font-variant: small-caps;
+    font-weight: bolder;
+  }
+  main section dl dd {
+    padding: 0 0 .3em 2em;
+    font-style: italic;
+    font-weight: bold;
+  }
+  main section dl dd a {
+    color: blue;
+    text-decoration: none;
   }
   footer {
     margin: 0 1em .5em;
