--- a/styles/main.css
+++ b/styles/main.css
@@ -43,7 +43,8 @@
     margin: 0 1em .5em;
   }
   main h1 {
-    padding: 0 0 0 2em;
+    padding: 0 0 0 4em;
+    font-size: 3em;
     font-variant: small-caps;
     font-style: italic;
     color: #198c8c;
